--- a/public/external_js.html
+++ b/public/external_js.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>External JS</title>
+	<title>External JavaScript</title>
 </head>
 <body>
 	<script src="js/external.js"></script>
