Adds JS Functions Exercise

--- a/public/functions_js.html
+++ b/public/functions_js.html
@@ -1,12 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
-	<style>
-		p {
-			font-style: 
-		}
-	</style>
+	<title>Function - JavaScript</title>
 </head>
 <body>
 	<script>
@@ -14,7 +9,7 @@
 
 			var myNameIs = 'Bob'; // TODO: Fill in your name here.
 			function sayHello(name) {
-				console.log("Hello.")
+				console.log("Hello " + myNameIs);
 			}
 
 			sayHello(myNameIs);
