--- a/public/iterating_arrays_js.html
+++ b/public/iterating_arrays_js.html
@@ -17,6 +17,17 @@
     console.log(names.length);
     // TODO: Create log statements that will print each of the names array elements individually.
 
+    /* ---
+    console.log(names[0]);
+    console.log(names[1]);
+    console.log(names[2]);
+    console.log(names[3]);
+    ---*/
+
+    for(var i = 0; i < names.length; i++) {
+        console.log(names[i]);
+    }
+
     names.forEach(function(name) {
     	console.log(name);
     });
