--- a/public/math-js.html
+++ b/public/math-js.html
@@ -17,22 +17,26 @@
         getArea: function () {
             // TODO: complete this method
             // hint: area = pi * radius^2
-            var area = Math.PI * Math.pow(this.radius, 2);
+            return Math.pow(this.radius, 2) * Math.PI;
+
+            //var area = Math.PI * Math.pow(this.radius, 2);
            
-            return area; // TODO: return the proper value
+            //return area; // TODO: return the proper value
         },
 
         logInfo: function (doRounding) {
             // TODO: complete this method.
-            this.getArea();
+            var area = this.getArea();
+            //this.getArea();
             	if(doRounding) {
-            		console.log(this.getArea());
-            		console.log(Math.round(this.getArea()));
+            		//console.log(this.getArea());
+            		//console.log(Math.round(this.getArea()));
+            		area = Math.round(area);
             	} else {
             // If doRounding is true, round the result to the nearest integer.
             // Otherwise, output the complete value
-
-            console.log("Area of a circle with radius: " + this.radius + ", is: " + this.getArea());
+            console.log("Area of a circle with radius: " + this.radius + ", is: " + area);
+            //console.log("Area of a circle with radius: " + this.radius + ", is: " + this.getArea());
         }
         }
     };
