Adds console to print rounded area

--- a/public/math-js.html
+++ b/public/math-js.html
@@ -32,6 +32,7 @@
             		//console.log(this.getArea());
             		//console.log(Math.round(this.getArea()));
             		area = Math.round(area);
+            		console.log(area);
             	} else {
             // If doRounding is true, round the result to the nearest integer.
             // Otherwise, output the complete value
