--- a/public/dom-query-js.html
+++ b/public/dom-query-js.html
@@ -25,42 +25,90 @@
     culpa qui officia deserunt mollit anim id est laborum.
 </p>
 
+<button class="btn" id="first">Button</button>
+<button class="btn" id="second">Button2</button>
+<button class="btn" id="third">Button3</button>
+<button class="btn" id="fourth">Button4</button>
+
 <script>
     (function() {
         "use strict";
         // TODO: Uncomment next line and get the main header element by id
-         var mainHeader = document.getElementById('main-header');
-         console.log(mainHeader);
+         //var mainHeader = document.getElementById('main-header');
+         //console.log(mainHeader);
 
         // TODO: Set inner html of mainHeader to "JavaScript is Cool"
-        mainHeader.innerHTML = 'JavaScript is Cool';
+        //mainHeader.innerHTML = 'JavaScript is Cool';
 
         // TODO: Uncomment the next line and get the sub header element by id
-        var subHeader = document.getElementById('sub-header');
-        console.log(subHeader);
+        //var subHeader = document.getElementById('sub-header');
+        //console.log(subHeader);
 
         // TODO: Set the text color of subHeader to blue
-        subHeader.style.color = 'blue';
+        //subHeader.style.color = 'blue';
 
         // TODO: Uncomment the next line and get all list items
-        var listItems = document.getElementsByTagName('li');
-        console.log(listItems);
+        //var listItems = document.getElementsByTagName('li');
+        //console.log(listItems);
 
         // TODO: Set text color on every other list item to grey
-        for(var i = 0; i < listItems.length; i++) {
-            if(i % 2 == 0) {
-                listItems[i].style.color = 'gray';
-            }
-        };
+        // for(var i = 0; i < listItems.length; i++) {
+        //     if(i % 2 == 0) {
+        //         listItems[i].style.color = 'gray';
+        //     }
+        // };
         // TODO: Set text color of li with dbid = 1 to blue
-        listItems[0].style.color = 'blue';
+        //listItems[0].style.color = 'blue';
 
         // TODO: Uncomment the next line and get all elements with class name sub-paragraph
-        var subParagraph = document.getElementsByClassName('sub-paragraph');
-        console.log(subParagraph);
+        // var subParagraph = document.getElementsByClassName('sub-paragraph');
+        // console.log(subParagraph);
 
         // TODO: Change the text in the first sub paragraph to "Mission Accomplished!"
-        subParagraph[0].innerHTML = "Mission Accomplished!";
+        //subParagraph[0].innerHTML = "Mission Accomplished!";
+
+
+        //-----Button Events -------
+        var mainHeader = document.getElementById('main-header');
+        var btn1 = document.getElementById('first');
+
+        var subHeader = document.getElementById('sub-header');
+        var btn2 = document.getElementById('second');
+
+        var listItems = document.getElementsByTagName('li');
+        var btn3 = document.getElementById('third');
+
+        var subParagraph = document.getElementsByClassName('sub-paragraph');
+        var btn4 = document.getElementById('fourth');
+
+
+
+        var changeMainHeader = function(event){
+             mainHeader.innerHTML = 'JavaScript is Cool';
+        };
+
+        var changeSubHeader = function(event) {
+            subHeader.style.color = 'blue';
+        };
+
+        var changeListColor = function(event) {
+            listItems[0].style.color = 'blue';
+            for(var i = 0; i < listItems.length; i++) {
+                if(i % 2 == 0) {
+                    listItems[i].style.color = 'gray';
+                }
+            }
+        };
+
+         var changeSubParagraph = function(event) {
+            subParagraph[0].innerHTML = "Mission Accomplished!";
+        };
+
+
+        btn1.addEventListener('click', changeMainHeader, false);
+        btn2.addEventListener('click', changeSubHeader, false);
+        btn3.addEventListener('click', changeListColor, false);
+        btn4.addEventListener('click', changeSubParagraph, false);
     })();
 </script>
 </body>
