--- a/public/calculator-js.html
+++ b/public/calculator-js.html
@@ -28,34 +28,57 @@
                     <div class="form-group">
                       <label for="inputEmail" class="control-label">Calculate Me</label>
                         <input type="text" readonly="true" class="form-control" id="left">
-                        <input type="text" readonly="true" class="form-control" id="middle">
+                        <input type="text" readonly="true" class="form-control form-control-operator" id="middle">
                         <input type="text" readonly="true" class="form-control" id="right">
                     </div>
 
-                    <div class="btn-group btn-group-justified">
-                      <a href="#" class="button btn btn-default" data-value="7">7</a>
-                      <a href="#" class="button btn btn-default" data-value="8">8</a>
-                      <a href="#" class="button btn btn-default" data-value="9">9</a>
-                      <a href="#" class="button btn btn-success btn-default" data-value="/">/</a>
+                    <ul class="nav nav-tabs">
+                      <li class="active"><a href="#numbers" data-toggle="tab">Numbers</a></li>
+                      <li><a href="#misc" data-toggle="tab">Misc</a></li>
+                    </ul>
+                    <div id="myTabContent" class="tab-content">
+                      <div class="tab-pane fade active in" id="numbers">
+                       <div class="btn-group btn-group-justified">
+                          <a href="#" class="button btn btn-default" data-value="7">7</a>
+                          <a href="#" class="button btn btn-default" data-value="8">8</a>
+                          <a href="#" class="button btn btn-default" data-value="9">9</a>
+                          <a href="#" class="button-operator btn btn-success btn-default" data-value="/">/</a>
+                        </div>
+                        <div class="btn-group btn-group-justified">
+                          <a href="#" class="button btn btn-default" data-value="4">4</a>
+                          <a href="#" class="button btn btn-default" data-value="5">5</a>
+                          <a href="#" class="button btn btn-default" data-value="6">6</a>
+                          <a href="#" class="button-operator btn btn-success btn-default" data-value="x">x</a>
+                        </div>
+                        <div class="btn-group btn-group-justified">
+                          <a href="#" class="button btn btn-default" data-value="1">1</a>
+                          <a href="#" class="button btn btn-default" data-value="2">2</a>
+                          <a href="#" class="button btn btn-default" data-value="3">3</a>
+                          <a href="#" class="button-operator btn btn-success btn-default" data-value="-">-</a>
+                        </div>
+                         <div class="btn-group btn-group-justified">
+                          <a href="#" class="button btn btn-default" data-value=".">.</a>
+                          <a href="#" class="button btn btn-default" data-value="0">0</a>
+                          <a href="#" class="button btn btn-default" data-value="=">=</a>
+                          <a href="#" class="button-operator btn btn-success btn-default" data-value="+">+</a>
+                        </div>
+                      </div>
+                      <div class="tab-pane fade" id="misc">
+                        <div class="btn-group btn-group-justified">
+                          <a href="#" class="button-operator btn btn-default" id='square' data-value="√">√</a>
+                        </div>
+                        <div class="btn-group btn-group-justified">
+                          <a href="#" class="button-operator btn btn-default" data-value="^">^</a>
+                        </div>
+                        <div class="btn-group btn-group-justified">
+                          <a href="#" class="button-operator btn btn-default" id='plus-minus' data-value="±">±</a>
+                        </div>
+                        <div class="btn-group btn-group-justified">
+                          <a href="#" class="button-operator btn btn-default" id='percentage' data-value="%">%</a>
+                        </div>
+                      </div>     
                     </div>
-                    <div class="btn-group btn-group-justified">
-                      <a href="#" class="button btn btn-default" data-value="4">4</a>
-                      <a href="#" class="button btn btn-default" data-value="5">5</a>
-                      <a href="#" class="button btn btn-default" data-value="6">6</a>
-                      <a href="#" class="button btn btn-success btn-default" data-value="x">x</a>
-                    </div>
-                    <div class="btn-group btn-group-justified">
-                      <a href="#" class="button btn btn-default" data-value="1">1</a>
-                      <a href="#" class="button btn btn-default" data-value="2">2</a>
-                      <a href="#" class="button btn btn-default" data-value="3">3</a>
-                      <a href="#" class="button btn btn-success btn-default" data-value="-">-</a>
-                    </div>
-                     <div class="btn-group btn-group-justified">
-                      <a href="#" class="button btn btn-default" data-value=".">.</a>
-                      <a href="#" class="button btn btn-default" data-value="0">0</a>
-                      <a href="#" class="button btn btn-default" data-value="=">=</a>
-                      <a href="#" class="button btn btn-success btn-default" data-value="+">+</a>
-                    </div>
+                    
                     <div class="btn-group btn-group-justified">
                       <a href="#" class="btn btn-primary btn-default btn-lg btn-block" id="clear">Clear</a>
 
