Changes pin icons to arrow icons for Google Maps API

--- a/public/google_maps.html
+++ b/public/google_maps.html
@@ -24,9 +24,9 @@
 	        });
 
         var image = {
-		  url: 'http://image000.flaticon.com/icons/png/128/8/8132.png',
+		  url: 'http://maps.google.com/mapfiles/ms/micons/arrow.png',
 		  // This marker is 20 pixels wide by 32 pixels high.
-		  size: new google.maps.Size(128, 128),
+		  size: new google.maps.Size(50, 50),
 		  // The origin for this image is (0, 0).
 		  origin: new google.maps.Point(0, 0),
 		  // The anchor for this image is the base of the flagpole at (0, 32).
@@ -50,7 +50,7 @@
 	    	  content: 'Jason\'s Deli'
 	    	}
 	    ];
-	    
+
 	    markers.forEach(function(marker) {
 	    	var restrauntMarker = new google.maps.Marker({
 	    		map: map,
