--- a/public/jquery_exercises.html
+++ b/public/jquery_exercises.html
@@ -18,7 +18,8 @@
 	<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
 	<script>
 	$(document).ready(function() {
-		$('.idk').css('border-style', 'solid').css('border-width', '1px');
+		$('h1, p, ul').css('border-style', 'solid').css('border-width', '1px');
+		$('p, ul').css('background-color', 'salmon');
 	});
 	</script>
 </body>
