Adds JQ exercise for addClass, removeClass, and toggleClass

--- a/public/konami_code.html
+++ b/public/konami_code.html
@@ -25,8 +25,8 @@
             console.log(index);
    			if(index === masLives.length) {
    				console.log('hi');
-   				console.log(window.location = 'https://www.youtube.com/watch?v=dQw4w9WgXcQ')
    				index = 0;
+   				console.log(window.location = 'https://www.youtube.com/watch?v=dQw4w9WgXcQ');
    			}; 
 
         });
