--- a/public/grades.html
+++ b/public/grades.html
@@ -80,6 +80,8 @@
         </div>
     </section>
 </article>
+<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+
 <script
     src="https://code.jquery.com/jquery-2.2.4.min.js"
     integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
