--- a/public/ajax-store.html
+++ b/public/ajax-store.html
@@ -2,13 +2,19 @@
 <html>
 <head>
     <title>Online Store</title>
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+
+<link type="text/css" rel="stylesheet" href="css_bootstrap/superhero_bootswatch.css"></style>
+
 </head>
 <body>
-
+<div class="container-fluid">  
 <h1>My Tool Store</h1>
 
-<table id="products">
+<table id="products" class="table table-striped table-hover">
     <thead>
+        <a href="#" id="refresh" class="btn btn-default">Refresh</a>
         <tr>
             <th>Title</th>
             <th>Quantity</th>
@@ -18,6 +24,10 @@
     </thead>
     <tbody id="insertProducts"></tbody>
 </table>
+</div>
+
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
@@ -25,19 +35,24 @@
 (function() {
     "use strict";
     // TODO: Create an ajax GET request for /data/inventory.json
-    $.ajax("Data/inventory.json", {
-        type: "GET"
-    }).done(function(inventory) {
-        console.log(inventory);
-        inventory.forEach(function(tool) {
-            console.log(tool.title);
-            $('#insertProducts').append("<tr><td>" + tool.title + "</td><td>" + tool.quantity + "</td><td>" + tool.price + "</td><td>" + tool.categories.join(', ') + "</td></tr>");
-        });
-    }).fail(function() {
-        alert('There was an error!')
-    }).always(function() {
-        alert('We are done.')
-    })
+    function refresh() {
+        $.ajax("Data/inventory.json", {
+            type: "GET"
+        }).done(function(inventory) {
+            console.log(inventory);
+            $('#insertProducts').html('');
+            inventory.forEach(function(tool) {
+                console.log(tool.title);
+                $('#insertProducts').append("<tr><td>" + tool.title + "</td><td>" + tool.quantity + "</td><td>" + tool.price + "</td><td>" + tool.categories.join(', ') + "</td></tr>");
+            });
+        }).fail(function() {
+            alert('There was an error!')
+        }).always(function() {
+            alert('We are done.')
+        })
+    };
+
+    $('#refresh').click(refresh);
     // TODO: Take the data from inventory.json and append it to the products table
     //       HINT: Your data should come back as a JSON object; use console.log() to inspect
     //             its contents and fields
