--- a/public/ajax-store.html
+++ b/public/ajax-store.html
@@ -51,7 +51,7 @@
             alert('We are done.')
         })
     };
-
+    $('document').ready(refresh);
     $('#refresh').click(refresh);
     // TODO: Take the data from inventory.json and append it to the products table
     //       HINT: Your data should come back as a JSON object; use console.log() to inspect
