--- a/public/ajax_blog.html
+++ b/public/ajax_blog.html
@@ -15,6 +15,7 @@
 	<div class="container-fluid">
 		<nav class="navbar navbar-default">
 		  <div class="container-fluid">
+
 		    <div class="navbar-header">
 		      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
 		        <span class="sr-only">Toggle navigation</span>
@@ -40,54 +41,56 @@
 		        <li><a href="#">Contact</a></li>
 		      </ul>
 		    </div>
-		  </div>
+
+			</div>
 		</nav>
-		
-	<div id="posts" class="container-fluid">
-			
+
+		<div id="posts" class="col-sm-8">
+				<!-- Server content -->
+		</div>
+
+		<div class="col-sm-3 col-sm-offset-1 blog-sidebar">
+					<div class="sidebar-module sidebar-module-inset">
+						<h4>About</h4>
+						<p>Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
+					</div>
+					<div class="sidebar-module">
+						<h4>Archives</h4>
+						<ol class="list-unstyled">
+							<li><a href="#">March 2014</a></li>
+							<li><a href="#">February 2014</a></li>
+							<li><a href="#">January 2014</a></li>
+							<li><a href="#">December 2013</a></li>
+							<li><a href="#">November 2013</a></li>
+							<li><a href="#">October 2013</a></li>
+							<li><a href="#">September 2013</a></li>
+							<li><a href="#">August 2013</a></li>
+							<li><a href="#">July 2013</a></li>
+							<li><a href="#">June 2013</a></li>
+							<li><a href="#">May 2013</a></li>
+							<li><a href="#">April 2013</a></li>
+						</ol>
+					</div>
+					<div class="sidebar-module">
+						<h4>Elsewhere</h4>
+						<ol class="list-unstyled">
+							<li><a href="#">GitHub</a></li>
+							<li><a href="#">Twitter</a></li>
+							<li><a href="#">Facebook</a></li>
+						</ol>
+					</div>
+		</div><!-- /.blog-sidebar -->
+
 	</div>
 
-
-		<ul class="pager">
+<div class="pagers">
+	<ul class="pager">
 		  <li class="previous disabled"><a href="#">&larr; Older</a></li>
 		  <li class="next"><a href="#">Newer &rarr;</a></li>
-		</ul>
-	
+	</ul>
+</div>
 
-	<div class="col-sm-3 col-sm-offset-1 blog-sidebar">
-          <div class="sidebar-module sidebar-module-inset">
-            <h4>About</h4>
-            <p>Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
-          </div>
-          <div class="sidebar-module">
-            <h4>Archives</h4>
-            <ol class="list-unstyled">
-              <li><a href="#">March 2014</a></li>
-              <li><a href="#">February 2014</a></li>
-              <li><a href="#">January 2014</a></li>
-              <li><a href="#">December 2013</a></li>
-              <li><a href="#">November 2013</a></li>
-              <li><a href="#">October 2013</a></li>
-              <li><a href="#">September 2013</a></li>
-              <li><a href="#">August 2013</a></li>
-              <li><a href="#">July 2013</a></li>
-              <li><a href="#">June 2013</a></li>
-              <li><a href="#">May 2013</a></li>
-              <li><a href="#">April 2013</a></li>
-            </ol>
-          </div>
-          <div class="sidebar-module">
-            <h4>Elsewhere</h4>
-            <ol class="list-unstyled">
-              <li><a href="#">GitHub</a></li>
-              <li><a href="#">Twitter</a></li>
-              <li><a href="#">Facebook</a></li>
-            </ol>
-          </div>
-        </div><!-- /.blog-sidebar -->
-	</div>
-	
-		
+
 <!-- Latest compiled and minified JavaScript -->
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
@@ -107,7 +110,7 @@
         			})
         			return string;
         		};
-        		$('#posts').append("<h3>" + entry.title + "</h3><p>" + entry.content + "</p><h6>" + entry.date + "</h6>" + catButton())
+        		$('#posts').prepend("<h3>" + entry.title + "</h3><p>" + entry.content + "</p><h6>" + entry.date + "</h6>" + catButton())
             });
 		});
 
