--- a/public/weather_api.html
+++ b/public/weather_api.html
@@ -14,6 +14,7 @@
 
       <!-- Three columns of text below the carousel -->
       <div id="current-weather" class="row">
+      </div>
       <div class="search" align="center">
         <form class="search_bar col-sm-4" role="search">
           <div class="form-group">
@@ -22,9 +23,8 @@
           <a id="submit-location" type="submit" class="btn btn-default">Search</a>
         </form>
       </div>
-      <div id="map">
+    <div id="map" class="col-sm-12">
 
-      </div>
     </div>
   </div>
 
@@ -36,27 +36,23 @@
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDUkpOYXPuKivxupZp49HoDVfCe2gWk-zc"></script>
   <script>
   (function() {
-  //
-  // var latitude = 0;
-  // var longitude = 0;
-  // var address = ;
 
-  function searchLocation() {
-    $('#searched_location').text('  ' + $('#location').val());
+  var latitude = 29.423017;
+  var longitude = -98.48527;
+  var map;
+  var searchLocation;
+  var content = " ";
 
-  };
-
+function weatherAPI() {
   $.ajax("http://api.openweathermap.org/data/2.5/forecast/daily", {
       data: {
           APPID: "c30e7489481df419a846324750b18794",
-          lat:    29.423017,
-          lon:   -98.48527,
+          lat:    latitude,
+          lon:   longitude,
           units: "imperial",
           cnt: 3
       }
   }).done(function(weather) {
-    console.log(weather);
-    var content = " ";
     weather.list.forEach(function(day){
       var date = new Date(day.dt*1000);
         content += "<div class='col-sm-4 day' align='center'><p id='timestamp'>" + date + "</p>";
@@ -67,17 +63,42 @@
         content += "<p><span>Wind</span>: " + day.speed + " mph</p>";
         content += "<p><span>Pressure</span>: " + day.pressure + "</p></div>"
     });
-
     $('#current-weather').append(content);
-    var map = new google.maps.Map(document.getElementById('map'), {
-	          zoom: 12,
-	          center: {lat: 29.4241, lng: -98.4936}
-	        });
   });
-// ---- Google maps
+};
+
+weatherAPI();
+map = new google.maps.Map(document.getElementById('map'), {
+	zoom: 12,
+	center: {lat: 29.4241, lng: -98.4936}
+	});
+
+          searchLocation = function() {
+            content = " ";
+            var location = $('#location');
+            $('#searched_location').text('  ' + location.val());
+            var address = location.val();
+
+            var geocoder = new google.maps.Geocoder();
+
+            geocoder.geocode({ "address": address }, function(results, status) {
+
+               if (status == google.maps.GeocoderStatus.OK) {
+                  $('#current-weather').html('');
+                   map.setCenter(results[0].geometry.location);
+                   latitude = results[0].geometry.location.lat();
+                   longitude = results[0].geometry.location.lng();
+                  weatherAPI();
+               } else {
+                   alert("Geocoding was not successful - STATUS: " + status);
+               }
+            });
+          }
 
 
-$('#submit-location').click(searchLocation);
+$('#submit-location').click(function() {
+    searchLocation();
+});
 
   })();
   </script>
