--- a/public/weather_api.html
+++ b/public/weather_api.html
@@ -68,34 +68,52 @@ function weatherAPI() {
 };
 
 weatherAPI();
+
 map = new google.maps.Map(document.getElementById('map'), {
 	zoom: 12,
 	center: {lat: 29.4241, lng: -98.4936}
 	});
 
-          searchLocation = function() {
-            content = " ";
-            var location = $('#location');
-            $('#searched_location').text('  ' + location.val());
-            var address = location.val();
+searchLocation = function() {
+  content = " ";
+  var location = $('#location');
+  $('#searched_location').text('  ' + location.val());
+  var address = location.val();
 
-            var geocoder = new google.maps.Geocoder();
+  var geocoder = new google.maps.Geocoder();
 
-            geocoder.geocode({ "address": address }, function(results, status) {
+  geocoder.geocode({ "address": address }, function(results, status) {
 
-               if (status == google.maps.GeocoderStatus.OK) {
-                  $('#current-weather').html('');
-                   map.setCenter(results[0].geometry.location);
-                   latitude = results[0].geometry.location.lat();
-                   longitude = results[0].geometry.location.lng();
-                  weatherAPI();
-               } else {
-                   alert("Geocoding was not successful - STATUS: " + status);
-               }
-            });
-          }
+  if (status == google.maps.GeocoderStatus.OK) {
+    $('#current-weather').html('');
+    map.setCenter(results[0].geometry.location);
+    latitude = results[0].geometry.location.lat();
+    longitude = results[0].geometry.location.lng();
+    weatherAPI();
+    geoMarker();
 
+  } else {
+    alert("Geocoding was not successful - STATUS: " + status);
+  }
+  });
+};
 
+function geoMarker() {
+  var marker = new google.maps.Marker({
+    map: map,
+    draggable: true,
+    animation: google.maps.Animation.DROP,
+    position: {lat: latitude, lng: longitude},
+  });
+
+google.maps.event.addListener(marker,'dragend',function(event) {
+          $('#current-weather').html('');
+          latitude = this.position.lat();
+          longitude = this.position.lng();
+          weatherAPI();
+      });
+};
+geoMarker();
 $('#submit-location').click(function() {
     searchLocation();
 });
